--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,15 +42,8 @@ services:
       SECRET: "${SECRET}"
       # Supabase PostgreSQL database configuration for Directus
       DB_CLIENT: "pg"
-      # Supabase connection settings (using connection pooler)
-      DB_HOST: "${DB_HOST:-aws-0-ap-southeast-1.pooler.supabase.com}"
-      DB_PORT: "${DB_PORT:-6543}"
-      DB_DATABASE: "${DB_DATABASE:-postgres}"
-      DB_USER: "${DB_USER:-postgres.xdpjstyoeqgvaacduzdw}"
-      DB_PASSWORD: "${DB_PASSWORD}"
-      # SSL configuration for Supabase (disable SSL for connection pooler)
-      DB_SSL: "false"
-      DB_SSL_REJECT_UNAUTHORIZED: "false"
+      # Use connection string format to avoid SSL issues
+      DB_CONNECTION_STRING: "postgresql://${DB_USER:-postgres.xdpjstyoeqgvaacduzdw}:${DB_PASSWORD}@${DB_HOST:-aws-0-ap-southeast-1.pooler.supabase.com}:${DB_PORT:-6543}/${DB_DATABASE:-postgres}?sslmode=disable"
       # Minimal connection pool to avoid timeouts
       DB_POOL_MIN: "1"
       DB_POOL_MAX: "1"
