Add Node.js SSL configuration to resolve certificate issues
- Set NODE_TLS_REJECT_UNAUTHORIZED=0 to bypass SSL certificate validation
- Enable DB_SSL=true with DB_SSL_REJECT_UNAUTHORIZED=false
- This should resolve self-signed certificate in certificate chain errors
- Based on common solutions found online for Directus + Supabase SSL issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,9 +48,11 @@ services:
       DB_DATABASE: "${DB_DATABASE:-postgres}"
       DB_USER: "${DB_USER:-postgres.xdpjstyoeqgvaacduzdw}"
       DB_PASSWORD: "${DB_PASSWORD}"
-      # Disable SSL to avoid certificate issues
-      DB_SSL: "false"
+      # Use prefer SSL mode to handle certificate issues
+      DB_SSL: "true"
       DB_SSL_REJECT_UNAUTHORIZED: "false"
+      # Additional Node.js SSL configuration
+      NODE_TLS_REJECT_UNAUTHORIZED: "0"
       # Minimal connection pool to avoid timeouts
       DB_POOL_MIN: "1"
       DB_POOL_MAX: "1"
