Fix Google Maps API CSP and configuration issues
- Update Content Security Policy (CSP) to allow Google Maps API:
  - Add https://maps.googleapis.com to script-src directive
  - Add https://maps.gstatic.com to script-src directive
  - Add Google Maps domains to img-src directive for map tiles
  - Ensure proper CSP configuration for Google Maps integration

- Improve Google Maps API key validation:
  - Add proper API key validation in GlobalNomadsMap component
  - Check for missing or placeholder API key values
  - Display user-friendly error message when API key is not configured
  - Prevent Google Maps loader from attempting to load with invalid keys

- Update environment configuration:
  - Add NEXT_PUBLIC_GOOGLE_MAPS_API_KEY to env.example
  - Include setup instructions for Google Maps API
  - Specify required APIs: Maps JavaScript API and Places API
  - Provide clear configuration guidance for developers

- Error handling improvements:
  - Better error state management in Google Maps component
  - Clear console warnings for missing API key configuration
  - Graceful fallback when Google Maps cannot be loaded
  - Improved user experience with proper error messaging

- Security enhancements:
  - Maintain strict CSP while allowing necessary Google Maps domains
  - Ensure only authorized domains can load scripts and resources
  - Balance security with functionality requirements

This resolves the CSP violation errors that were preventing Google Maps from loading and provides better configuration guidance for developers.

--- a/env.example
+++ b/env.example
@@ -29,3 +29,8 @@ ADMIN_PASSWORD=admin123
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXTAUTH_SECRET=your_nextauth_secret
 NEXTAUTH_URL=http://localhost:3000
+
+# Google Maps API Configuration
+# Get your API key from: https://console.cloud.google.com/apis/credentials
+# Enable the following APIs: Maps JavaScript API, Places API
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
