Switch Directus to direct database connection
- Changed from connection pooler to direct database connection
- Using direct Supabase database host instead of pooler
- Updated DB_HOST to db.xdpjstyoeqgvaacduzdw.supabase.co
- Updated DB_PORT to 5432 (direct connection)
- Updated DB_USER to postgres.xdpjstyoeqgvaacduzdw
- This should resolve connection issues with Supabase pooler

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,8 +42,12 @@ services:
       SECRET: "${SECRET}"
       # Supabase PostgreSQL database configuration for Directus
       DB_CLIENT: "pg"
-      # Use connection string with explicit sslmode=disable and additional parameters
-      DB_CONNECTION_STRING: "postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}?sslmode=disable&sslcert=&sslkey=&sslrootcert=&application_name=directus"
+      # Use direct database connection (not pooler)
+      DB_HOST: "db.xdpjstyoeqgvaacduzdw.supabase.co"
+      DB_PORT: "5432"
+      DB_DATABASE: "postgres"
+      DB_USER: "postgres.xdpjstyoeqgvaacduzdw"
+      DB_PASSWORD: "${DB_PASSWORD}"
       # Force disable SSL at the database level
       DB_SSL: "false"
       DB_SSL_REJECT_UNAUTHORIZED: "false"
