--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,11 +42,11 @@ services:
       SECRET: "${SECRET}"
       # Supabase PostgreSQL database configuration for Directus
       DB_CLIENT: "pg"
-      # Use direct database connection (not pooler)
-      DB_HOST: "db.xdpjstyoeqgvaacduzdw.supabase.co"
-      DB_PORT: "5432"
+      # Use Supabase connection pooler (correct configuration)
+      DB_HOST: "aws-0-ap-southeast-1.pooler.supabase.com"
+      DB_PORT: "6543"
       DB_DATABASE: "postgres"
-      DB_USER: "postgres.xdpjstyoeqgvaacduzdw"
+      DB_USER: "postgres"
       DB_PASSWORD: "${DB_PASSWORD}"
       # Force disable SSL at the database level
       DB_SSL: "false"
