Fix SSL certificate issue for Directus Supabase connection
- Changed sslmode from 'require' to 'disable' to avoid self-signed cert error
- Added NODE_TLS_REJECT_UNAUTHORIZED=0 to disable SSL verification
- This should resolve the 'SELF_SIGNED_CERT_IN_CHAIN' error
- Directus should now be able to connect to Supabase database successfully

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,8 +42,10 @@ services:
       SECRET: "${SECRET}"
       # Supabase PostgreSQL database configuration for Directus
       DB_CLIENT: "pg"
-      # Use connection string approach with proper SSL handling
-      DB_CONNECTION_STRING: "postgresql://postgres:${DB_PASSWORD}@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?sslmode=require"
+      # Use connection string with SSL disabled for Supabase compatibility
+      DB_CONNECTION_STRING: "postgresql://postgres:${DB_PASSWORD}@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?sslmode=disable"
+      # Disable SSL verification for self-signed certificates
+      NODE_TLS_REJECT_UNAUTHORIZED: "0"
       NODE_EXTRA_CA_CERTS: ""
       SSL_CERT_FILE: ""
       SSL_KEY_FILE: ""
