feat: Complete Nomad Agent AI Enhancement System
✨ New Features:
- AI-powered recommendation engine with LLM-driven personalized suggestions
- Dual recommendation mode: rule-based matching + AI enhancement
- Exchange Rate API integration (ExchangeRate-API)
- Data source expansion support (Bright Data SERP API)

🔧 Technical Improvements:
- Enhanced nomadAgent.ts: Added AIRecommendationEngine class
- Upgraded API endpoints: Support useAI parameter for AI enhancement
- Improved frontend UI: Added AI enhancement option and dynamic button text
- Enhanced type definitions: RouteOption, RiskAssessment, etc.

🗑️ Code Cleanup:
- Removed all test script files
- Optimized console.log output
- Fixed TypeScript type errors

✅ Verification Passed:
- npm run build compilation successful
- All type checks passed
- Static page generation completed

🎯 Core Features Completed:
- Database architecture deployed
- Multi-agent collaboration system
- Intelligent route planning
- Modern user interface

--- a/env.example
+++ b/env.example
@@ -34,3 +34,16 @@ NEXTAUTH_URL=http://localhost:3000
 # Get your API key from: https://console.cloud.google.com/apis/credentials
 # Enable the following APIs: Maps JavaScript API, Places API
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
+
+# Cost of Living Data Sources
+# Option 1: Numbeo API (if available)
+NUMBEO_API_KEY=your_numbeo_api_key
+
+# Option 2: Bright Data SERP API (参考: https://github.com/sixthextinction/cost-of-living-agent)
+# 用于实时搜索最新生活成本数据
+BRIGHT_DATA_CUSTOMER_ID=hl_xxxxxx
+BRIGHT_DATA_ZONE=xxxxxx
+BRIGHT_DATA_PASSWORD=xxxxxxxxxxxxxxx
+
+# Option 3: OpenAI API (用于AI分析搜索数据)
+OPENAI_API_KEY=your_openai_api_key
